--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav ml-auto ">
           <li class="nav-item active ">
-            <a class="nav-link" href="index.html">Accueille<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Accueill<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="bd.html">Les Bd</a>
@@ -323,7 +323,7 @@
     <div>BdStor tous drois réservés 2020
     </div>
     <a href="https://www.linkedin.com/in/riad-si-moh-6443aa1a9/"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/Riad-Moha"> <i class="fab fa-github"></i></a>
+    <a href="https://github.com/riadsimoh"> <i class="fab fa-github"></i></a>
   </footer>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
