--- a/payement.html
+++ b/payement.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Revenir à l'Accueille<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Revenir à l'Accueill<span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
