--- a/bd.html
+++ b/bd.html
@@ -72,7 +72,7 @@
     <div>BdStor tous drois réservés 2020
     </div>
     <a href="https://www.linkedin.com/in/riad-si-moh-6443aa1a9/"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/Riad-Moha"> <i class="fab fa-github"></i></a>
+    <a href="https://github.com/riadsimoh"> <i class="fab fa-github"></i></a>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
