--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
     <div>BdStor tous drois réservés 2020
     </div>
     <a href="https://www.linkedin.com/in/riad-si-moh-6443aa1a9/"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/Riad-Moha"> <i class="fab fa-github"></i></a>
+    <a href="https://github.com/riadsimoh"> <i class="fab fa-github"></i></a>
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
